<resources>
    <string name="app_name">蜜蜂考勤</string>
    <string name="null_string">请选择文件！</string>
    <string name="main_open_search">open</string>
    <string name="main_close_search">close</string>
    <string name="main_import_file">导入文件</string>
    <string name="main_export_file">导出文件</string>
    <string name="file_name">文件名</string>
    <string name="dialog_file_name">文件名(txt)</string>
    <string name="file_path">文件路径</string>
    <string name="SDCardActivity_title">文件列表</string>
    <string name="uncalled">未到</string>
    <string name="has_to">已到</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="open_port_fail">打开串口失败</string>
    <string name="searching">正在搜索中。。</string>
    <string name="main_setting">设置</string>
    <string name="not_is_null">不能为空</string>
    <string name="write_suecces">设置成功</string>
    <string name="write_fail">设置失败</string>
    <string name="details">详情</string>
    <string name="confirm">确定</string>

    <!--dialog edit info-->
    <string name="summary_name">姓名：%1$s</string>
    <string name="summary_carid">编号：%1$s</string>
    <string name="summary_rfid">rfid编号：%1$s</string>
    <string name="summary_room">归属区：%1$s</string>
    <string name="summary_type">类别：%1$s</string>
    <string name="summary_level">管理级别：%1$s</string>
    <string name="summary_note_hint">备注</string>
    <string name="cancel">取消</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">失败</string>
    <string name="save_file">保存文件</string>
    <string name="save_path">"保存路径：/storage/emulated/0/PrisonRoolCall"</string>
    <string name="isFileExists">%1$s已存在，是否覆盖该文件</string>
</resources>
